--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <audio id="background-music" src="./55.mp3" autoplay loop></audio>
+    <audio id="background-music" preload="auto" src="./55.mp3"></audio>
     <div id="game-container">
         <!-- Главное меню -->
         <div id="main-menu">
